--- a/src/recruitment/templates/base.html
+++ b/src/recruitment/templates/base.html
@@ -1,5 +1,15 @@
 <!--jobs/templates/base.html-->
 
+{# Load the tag library #}
+{% load bootstrap4 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
 
 {% load i18n %}
 
